--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/breeze": "^1.28",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
+        "laravel/socialite": "^5.12",
         "laravel/tinker": "^2.8",
         "tightenco/ziggy": "^1.0"
     },
