--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@heroicons/react": "^2.1.1",
         "@tanstack/react-table": "^8.12.0",
-        "react-table": "^7.8.0"
+        "react-table": "^7.8.0",
+        "tailwind-scrollbar-hide": "^1.1.7"
     }
 }
