--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@heroicons/react": "^2.1.1",
         "@tanstack/react-table": "^8.12.0",
         "jodit-react": "^4.0.9",
+        "quill": "^2.0.0-rc.2",
         "react-table": "^7.8.0",
         "tailwind-scrollbar-hide": "^1.1.7"
     }
