--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
         "@tanstack/react-table": "^8.12.0",
         "jodit-react": "^4.0.9",
         "quill": "^2.0.0-rc.2",
+        "quill-image-resize-module": "^3.0.0",
+        "react-quill": "^2.0.0",
         "react-table": "^7.8.0",
-        "tailwind-scrollbar-hide": "^1.1.7"
+        "tailwind-scrollbar-hide": "^1.1.7",
+        "uuid": "^9.0.1"
     }
 }
